parser.output
   0  $accept : %entry% $end

   1  program :
   2          | program vdecl
   3          | program fdecl

   4  fdecl : typ ID LPR formal_list RPR LBC vdecl_list stmt_list RBC

   5  typ : VOID
   6      | STRING
   7      | FLOAT
   8      | BOOL
   9      | INT

  10  formal_list :
  11              | formal_list formal_decl

  12  formal_decl : typ ID
  13              | COMMA typ ID

  14  vdecl_list :
  15             | vdecl_list vdecl

  16  vdecl : typ ID SEMI
  17        | typ ID LBK INT_T RBK SEMI
  18        | typ ID LBK INT_T RBK ASSIGN expr SEMI
  19        | typ ID ASSIGN expr SEMI

  20  rule_list :
  21            | rule_list rdecl

  22  rdecl : pattern action

  23  pattern : REGEX single_regex REGEX

  24  action : LBC vdecl_list stmt_list RBC

  25  stmt_list :
  26            | stmt_list stmt

  27  stmt : expr SEMI
  28       | RETURN expr SEMI
  29       | LBC stmt_list RBC
  30       | IF LPR expr RPR stmt ELSE stmt
  31       | FOR LPR expr_opt SEMI expr SEMI expr_opt RPR stmt
  32       | WHILE LPR expr RPR stmt

  33  expr_opt :
  34           | expr

  35  expr : STRING_T
  36       | FLOAT_T
  37       | INT_T
  38       | ID
  39       | LBK expr_list RBK
  40       | expr PLUS expr
  41       | expr MINUS expr
  42       | expr TIMES expr
  43       | expr DIVIDE expr
  44       | expr EQ expr
  45       | expr NEQ expr
  46       | expr RL expr
  47       | expr LEQ expr
  48       | expr LR expr
  49       | expr REQ expr
  50       | expr AND expr
  51       | expr OR expr
  52       | MINUS expr
  53       | NOT expr
  54       | expr ASSIGN expr
  55       | LBK RBK
  56       | ID LBK expr RBK
  57       | ID LPR args_opt RPR
  58       | LPR expr RPR

  59  expr_list : expr
  60            | expr_list COMMA expr

  61  args_opt :
  62           | args_list

  63  args_list : expr
  64            | args_list COMMA expr

  65  single_regex : REGEX_STRING

  66  %entry% : '\001' program

state 0
	$accept : . %entry% $end  (0)

	'\001'  shift 1
	.  error

	%entry%  goto 2


state 1
	%entry% : '\001' . program  (66)
	program : .  (1)

	.  reduce 1

	program  goto 3


state 2
	$accept : %entry% . $end  (0)

	$end  accept


state 3
	program : program . vdecl  (2)
	program : program . fdecl  (3)
	%entry% : '\001' program .  (66)

	BOOL  shift 4
	VOID  shift 5
	FLOAT  shift 6
	STRING  shift 7
	INT  shift 8
	$end  reduce 66

	vdecl  goto 9
	fdecl  goto 10
	typ  goto 11


state 4
	typ : BOOL .  (8)

	.  reduce 8


state 5
	typ : VOID .  (5)

	.  reduce 5


state 6
	typ : FLOAT .  (7)

	.  reduce 7


state 7
	typ : STRING .  (6)

	.  reduce 6


state 8
	typ : INT .  (9)

	.  reduce 9


state 9
	program : program vdecl .  (2)

	.  reduce 2


state 10
	program : program fdecl .  (3)

	.  reduce 3


state 11
	fdecl : typ . ID LPR formal_list RPR LBC vdecl_list stmt_list RBC  (4)
	vdecl : typ . ID SEMI  (16)
	vdecl : typ . ID LBK INT_T RBK SEMI  (17)
	vdecl : typ . ID LBK INT_T RBK ASSIGN expr SEMI  (18)
	vdecl : typ . ID ASSIGN expr SEMI  (19)

	ID  shift 12
	.  error


state 12
	fdecl : typ ID . LPR formal_list RPR LBC vdecl_list stmt_list RBC  (4)
	vdecl : typ ID . SEMI  (16)
	vdecl : typ ID . LBK INT_T RBK SEMI  (17)
	vdecl : typ ID . LBK INT_T RBK ASSIGN expr SEMI  (18)
	vdecl : typ ID . ASSIGN expr SEMI  (19)

	SEMI  shift 13
	LPR  shift 14
	LBK  shift 15
	ASSIGN  shift 16
	.  error


state 13
	vdecl : typ ID SEMI .  (16)

	.  reduce 16


state 14
	fdecl : typ ID LPR . formal_list RPR LBC vdecl_list stmt_list RBC  (4)
	formal_list : .  (10)

	.  reduce 10

	formal_list  goto 17


state 15
	vdecl : typ ID LBK . INT_T RBK SEMI  (17)
	vdecl : typ ID LBK . INT_T RBK ASSIGN expr SEMI  (18)

	INT_T  shift 18
	.  error


state 16
	vdecl : typ ID ASSIGN . expr SEMI  (19)

	LPR  shift 19
	LBK  shift 20
	MINUS  shift 21
	NOT  shift 22
	ID  shift 23
	STRING_T  shift 24
	INT_T  shift 25
	FLOAT_T  shift 26
	.  error

	expr  goto 27


state 17
	fdecl : typ ID LPR formal_list . RPR LBC vdecl_list stmt_list RBC  (4)
	formal_list : formal_list . formal_decl  (11)

	COMMA  shift 28
	RPR  shift 29
	BOOL  shift 4
	VOID  shift 5
	FLOAT  shift 6
	STRING  shift 7
	INT  shift 8
	.  error

	typ  goto 30
	formal_decl  goto 31


state 18
	vdecl : typ ID LBK INT_T . RBK SEMI  (17)
	vdecl : typ ID LBK INT_T . RBK ASSIGN expr SEMI  (18)

	RBK  shift 32
	.  error


state 19
	expr : LPR . expr RPR  (58)

	LPR  shift 19
	LBK  shift 20
	MINUS  shift 21
	NOT  shift 22
	ID  shift 23
	STRING_T  shift 24
	INT_T  shift 25
	FLOAT_T  shift 26
	.  error

	expr  goto 33


state 20
	expr : LBK . expr_list RBK  (39)
	expr : LBK . RBK  (55)

	LPR  shift 19
	LBK  shift 20
	RBK  shift 34
	MINUS  shift 21
	NOT  shift 22
	ID  shift 23
	STRING_T  shift 24
	INT_T  shift 25
	FLOAT_T  shift 26
	.  error

	expr  goto 35
	expr_list  goto 36


state 21
	expr : MINUS . expr  (52)

	LPR  shift 19
	LBK  shift 20
	MINUS  shift 21
	NOT  shift 22
	ID  shift 23
	STRING_T  shift 24
	INT_T  shift 25
	FLOAT_T  shift 26
	.  error

	expr  goto 37


state 22
	expr : NOT . expr  (53)

	LPR  shift 19
	LBK  shift 20
	MINUS  shift 21
	NOT  shift 22
	ID  shift 23
	STRING_T  shift 24
	INT_T  shift 25
	FLOAT_T  shift 26
	.  error

	expr  goto 38


state 23
	expr : ID .  (38)
	expr : ID . LBK expr RBK  (56)
	expr : ID . LPR args_opt RPR  (57)

	LPR  shift 39
	LBK  shift 40
	SEMI  reduce 38
	COMMA  reduce 38
	RPR  reduce 38
	RBK  reduce 38
	PLUS  reduce 38
	MINUS  reduce 38
	TIMES  reduce 38
	DIVIDE  reduce 38
	EQ  reduce 38
	NEQ  reduce 38
	LEQ  reduce 38
	REQ  reduce 38
	LR  reduce 38
	RL  reduce 38
	AND  reduce 38
	OR  reduce 38
	ASSIGN  reduce 38


state 24
	expr : STRING_T .  (35)

	.  reduce 35


state 25
	expr : INT_T .  (37)

	.  reduce 37


state 26
	expr : FLOAT_T .  (36)

	.  reduce 36


state 27
	vdecl : typ ID ASSIGN expr . SEMI  (19)
	expr : expr . PLUS expr  (40)
	expr : expr . MINUS expr  (41)
	expr : expr . TIMES expr  (42)
	expr : expr . DIVIDE expr  (43)
	expr : expr . EQ expr  (44)
	expr : expr . NEQ expr  (45)
	expr : expr . RL expr  (46)
	expr : expr . LEQ expr  (47)
	expr : expr . LR expr  (48)
	expr : expr . REQ expr  (49)
	expr : expr . AND expr  (50)
	expr : expr . OR expr  (51)
	expr : expr . ASSIGN expr  (54)

	SEMI  shift 41
	PLUS  shift 42
	MINUS  shift 43
	TIMES  shift 44
	DIVIDE  shift 45
	EQ  shift 46
	NEQ  shift 47
	LEQ  shift 48
	REQ  shift 49
	LR  shift 50
	RL  shift 51
	AND  shift 52
	OR  shift 53
	ASSIGN  shift 54
	.  error


state 28
	formal_decl : COMMA . typ ID  (13)

	BOOL  shift 4
	VOID  shift 5
	FLOAT  shift 6
	STRING  shift 7
	INT  shift 8
	.  error

	typ  goto 55


state 29
	fdecl : typ ID LPR formal_list RPR . LBC vdecl_list stmt_list RBC  (4)

	LBC  shift 56
	.  error


state 30
	formal_decl : typ . ID  (12)

	ID  shift 57
	.  error


state 31
	formal_list : formal_list formal_decl .  (11)

	.  reduce 11


state 32
	vdecl : typ ID LBK INT_T RBK . SEMI  (17)
	vdecl : typ ID LBK INT_T RBK . ASSIGN expr SEMI  (18)

	SEMI  shift 58
	ASSIGN  shift 59
	.  error


state 33
	expr : expr . PLUS expr  (40)
	expr : expr . MINUS expr  (41)
	expr : expr . TIMES expr  (42)
	expr : expr . DIVIDE expr  (43)
	expr : expr . EQ expr  (44)
	expr : expr . NEQ expr  (45)
	expr : expr . RL expr  (46)
	expr : expr . LEQ expr  (47)
	expr : expr . LR expr  (48)
	expr : expr . REQ expr  (49)
	expr : expr . AND expr  (50)
	expr : expr . OR expr  (51)
	expr : expr . ASSIGN expr  (54)
	expr : LPR expr . RPR  (58)

	RPR  shift 60
	PLUS  shift 42
	MINUS  shift 43
	TIMES  shift 44
	DIVIDE  shift 45
	EQ  shift 46
	NEQ  shift 47
	LEQ  shift 48
	REQ  shift 49
	LR  shift 50
	RL  shift 51
	AND  shift 52
	OR  shift 53
	ASSIGN  shift 54
	.  error


state 34
	expr : LBK RBK .  (55)

	.  reduce 55


state 35
	expr : expr . PLUS expr  (40)
	expr : expr . MINUS expr  (41)
	expr : expr . TIMES expr  (42)
	expr : expr . DIVIDE expr  (43)
	expr : expr . EQ expr  (44)
	expr : expr . NEQ expr  (45)
	expr : expr . RL expr  (46)
	expr : expr . LEQ expr  (47)
	expr : expr . LR expr  (48)
	expr : expr . REQ expr  (49)
	expr : expr . AND expr  (50)
	expr : expr . OR expr  (51)
	expr : expr . ASSIGN expr  (54)
	expr_list : expr .  (59)

	PLUS  shift 42
	MINUS  shift 43
	TIMES  shift 44
	DIVIDE  shift 45
	EQ  shift 46
	NEQ  shift 47
	LEQ  shift 48
	REQ  shift 49
	LR  shift 50
	RL  shift 51
	AND  shift 52
	OR  shift 53
	ASSIGN  shift 54
	COMMA  reduce 59
	RBK  reduce 59


state 36
	expr : LBK expr_list . RBK  (39)
	expr_list : expr_list . COMMA expr  (60)

	COMMA  shift 61
	RBK  shift 62
	.  error


state 37
	expr : expr . PLUS expr  (40)
	expr : expr . MINUS expr  (41)
	expr : expr . TIMES expr  (42)
	expr : expr . DIVIDE expr  (43)
	expr : expr . EQ expr  (44)
	expr : expr . NEQ expr  (45)
	expr : expr . RL expr  (46)
	expr : expr . LEQ expr  (47)
	expr : expr . LR expr  (48)
	expr : expr . REQ expr  (49)
	expr : expr . AND expr  (50)
	expr : expr . OR expr  (51)
	expr : MINUS expr .  (52)
	expr : expr . ASSIGN expr  (54)

	TIMES  shift 44
	DIVIDE  shift 45
	SEMI  reduce 52
	COMMA  reduce 52
	RPR  reduce 52
	RBK  reduce 52
	PLUS  reduce 52
	MINUS  reduce 52
	EQ  reduce 52
	NEQ  reduce 52
	LEQ  reduce 52
	REQ  reduce 52
	LR  reduce 52
	RL  reduce 52
	AND  reduce 52
	OR  reduce 52
	ASSIGN  reduce 52


state 38
	expr : expr . PLUS expr  (40)
	expr : expr . MINUS expr  (41)
	expr : expr . TIMES expr  (42)
	expr : expr . DIVIDE expr  (43)
	expr : expr . EQ expr  (44)
	expr : expr . NEQ expr  (45)
	expr : expr . RL expr  (46)
	expr : expr . LEQ expr  (47)
	expr : expr . LR expr  (48)
	expr : expr . REQ expr  (49)
	expr : expr . AND expr  (50)
	expr : expr . OR expr  (51)
	expr : NOT expr .  (53)
	expr : expr . ASSIGN expr  (54)

	.  reduce 53


state 39
	expr : ID LPR . args_opt RPR  (57)
	args_opt : .  (61)

	LPR  shift 19
	LBK  shift 20
	MINUS  shift 21
	NOT  shift 22
	ID  shift 23
	STRING_T  shift 24
	INT_T  shift 25
	FLOAT_T  shift 26
	RPR  reduce 61

	expr  goto 63
	args_opt  goto 64
	args_list  goto 65


state 40
	expr : ID LBK . expr RBK  (56)

	LPR  shift 19
	LBK  shift 20
	MINUS  shift 21
	NOT  shift 22
	ID  shift 23
	STRING_T  shift 24
	INT_T  shift 25
	FLOAT_T  shift 26
	.  error

	expr  goto 66


state 41
	vdecl : typ ID ASSIGN expr SEMI .  (19)

	.  reduce 19


state 42
	expr : expr PLUS . expr  (40)

	LPR  shift 19
	LBK  shift 20
	MINUS  shift 21
	NOT  shift 22
	ID  shift 23
	STRING_T  shift 24
	INT_T  shift 25
	FLOAT_T  shift 26
	.  error

	expr  goto 67


state 43
	expr : expr MINUS . expr  (41)

	LPR  shift 19
	LBK  shift 20
	MINUS  shift 21
	NOT  shift 22
	ID  shift 23
	STRING_T  shift 24
	INT_T  shift 25
	FLOAT_T  shift 26
	.  error

	expr  goto 68


state 44
	expr : expr TIMES . expr  (42)

	LPR  shift 19
	LBK  shift 20
	MINUS  shift 21
	NOT  shift 22
	ID  shift 23
	STRING_T  shift 24
	INT_T  shift 25
	FLOAT_T  shift 26
	.  error

	expr  goto 69


state 45
	expr : expr DIVIDE . expr  (43)

	LPR  shift 19
	LBK  shift 20
	MINUS  shift 21
	NOT  shift 22
	ID  shift 23
	STRING_T  shift 24
	INT_T  shift 25
	FLOAT_T  shift 26
	.  error

	expr  goto 70


state 46
	expr : expr EQ . expr  (44)

	LPR  shift 19
	LBK  shift 20
	MINUS  shift 21
	NOT  shift 22
	ID  shift 23
	STRING_T  shift 24
	INT_T  shift 25
	FLOAT_T  shift 26
	.  error

	expr  goto 71


state 47
	expr : expr NEQ . expr  (45)

	LPR  shift 19
	LBK  shift 20
	MINUS  shift 21
	NOT  shift 22
	ID  shift 23
	STRING_T  shift 24
	INT_T  shift 25
	FLOAT_T  shift 26
	.  error

	expr  goto 72


state 48
	expr : expr LEQ . expr  (47)

	LPR  shift 19
	LBK  shift 20
	MINUS  shift 21
	NOT  shift 22
	ID  shift 23
	STRING_T  shift 24
	INT_T  shift 25
	FLOAT_T  shift 26
	.  error

	expr  goto 73


state 49
	expr : expr REQ . expr  (49)

	LPR  shift 19
	LBK  shift 20
	MINUS  shift 21
	NOT  shift 22
	ID  shift 23
	STRING_T  shift 24
	INT_T  shift 25
	FLOAT_T  shift 26
	.  error

	expr  goto 74


state 50
	expr : expr LR . expr  (48)

	LPR  shift 19
	LBK  shift 20
	MINUS  shift 21
	NOT  shift 22
	ID  shift 23
	STRING_T  shift 24
	INT_T  shift 25
	FLOAT_T  shift 26
	.  error

	expr  goto 75


state 51
	expr : expr RL . expr  (46)

	LPR  shift 19
	LBK  shift 20
	MINUS  shift 21
	NOT  shift 22
	ID  shift 23
	STRING_T  shift 24
	INT_T  shift 25
	FLOAT_T  shift 26
	.  error

	expr  goto 76


state 52
	expr : expr AND . expr  (50)

	LPR  shift 19
	LBK  shift 20
	MINUS  shift 21
	NOT  shift 22
	ID  shift 23
	STRING_T  shift 24
	INT_T  shift 25
	FLOAT_T  shift 26
	.  error

	expr  goto 77


state 53
	expr : expr OR . expr  (51)

	LPR  shift 19
	LBK  shift 20
	MINUS  shift 21
	NOT  shift 22
	ID  shift 23
	STRING_T  shift 24
	INT_T  shift 25
	FLOAT_T  shift 26
	.  error

	expr  goto 78


state 54
	expr : expr ASSIGN . expr  (54)

	LPR  shift 19
	LBK  shift 20
	MINUS  shift 21
	NOT  shift 22
	ID  shift 23
	STRING_T  shift 24
	INT_T  shift 25
	FLOAT_T  shift 26
	.  error

	expr  goto 79


state 55
	formal_decl : COMMA typ . ID  (13)

	ID  shift 80
	.  error


state 56
	fdecl : typ ID LPR formal_list RPR LBC . vdecl_list stmt_list RBC  (4)
	vdecl_list : .  (14)

	.  reduce 14

	vdecl_list  goto 81


state 57
	formal_decl : typ ID .  (12)

	.  reduce 12


state 58
	vdecl : typ ID LBK INT_T RBK SEMI .  (17)

	.  reduce 17


state 59
	vdecl : typ ID LBK INT_T RBK ASSIGN . expr SEMI  (18)

	LPR  shift 19
	LBK  shift 20
	MINUS  shift 21
	NOT  shift 22
	ID  shift 23
	STRING_T  shift 24
	INT_T  shift 25
	FLOAT_T  shift 26
	.  error

	expr  goto 82


state 60
	expr : LPR expr RPR .  (58)

	.  reduce 58


state 61
	expr_list : expr_list COMMA . expr  (60)

	LPR  shift 19
	LBK  shift 20
	MINUS  shift 21
	NOT  shift 22
	ID  shift 23
	STRING_T  shift 24
	INT_T  shift 25
	FLOAT_T  shift 26
	.  error

	expr  goto 83


state 62
	expr : LBK expr_list RBK .  (39)

	.  reduce 39


state 63
	expr : expr . PLUS expr  (40)
	expr : expr . MINUS expr  (41)
	expr : expr . TIMES expr  (42)
	expr : expr . DIVIDE expr  (43)
	expr : expr . EQ expr  (44)
	expr : expr . NEQ expr  (45)
	expr : expr . RL expr  (46)
	expr : expr . LEQ expr  (47)
	expr : expr . LR expr  (48)
	expr : expr . REQ expr  (49)
	expr : expr . AND expr  (50)
	expr : expr . OR expr  (51)
	expr : expr . ASSIGN expr  (54)
	args_list : expr .  (63)

	PLUS  shift 42
	MINUS  shift 43
	TIMES  shift 44
	DIVIDE  shift 45
	EQ  shift 46
	NEQ  shift 47
	LEQ  shift 48
	REQ  shift 49
	LR  shift 50
	RL  shift 51
	AND  shift 52
	OR  shift 53
	ASSIGN  shift 54
	COMMA  reduce 63
	RPR  reduce 63


state 64
	expr : ID LPR args_opt . RPR  (57)

	RPR  shift 84
	.  error


state 65
	args_opt : args_list .  (62)
	args_list : args_list . COMMA expr  (64)

	COMMA  shift 85
	RPR  reduce 62


state 66
	expr : expr . PLUS expr  (40)
	expr : expr . MINUS expr  (41)
	expr : expr . TIMES expr  (42)
	expr : expr . DIVIDE expr  (43)
	expr : expr . EQ expr  (44)
	expr : expr . NEQ expr  (45)
	expr : expr . RL expr  (46)
	expr : expr . LEQ expr  (47)
	expr : expr . LR expr  (48)
	expr : expr . REQ expr  (49)
	expr : expr . AND expr  (50)
	expr : expr . OR expr  (51)
	expr : expr . ASSIGN expr  (54)
	expr : ID LBK expr . RBK  (56)

	RBK  shift 86
	PLUS  shift 42
	MINUS  shift 43
	TIMES  shift 44
	DIVIDE  shift 45
	EQ  shift 46
	NEQ  shift 47
	LEQ  shift 48
	REQ  shift 49
	LR  shift 50
	RL  shift 51
	AND  shift 52
	OR  shift 53
	ASSIGN  shift 54
	.  error


state 67
	expr : expr . PLUS expr  (40)
	expr : expr PLUS expr .  (40)
	expr : expr . MINUS expr  (41)
	expr : expr . TIMES expr  (42)
	expr : expr . DIVIDE expr  (43)
	expr : expr . EQ expr  (44)
	expr : expr . NEQ expr  (45)
	expr : expr . RL expr  (46)
	expr : expr . LEQ expr  (47)
	expr : expr . LR expr  (48)
	expr : expr . REQ expr  (49)
	expr : expr . AND expr  (50)
	expr : expr . OR expr  (51)
	expr : expr . ASSIGN expr  (54)

	TIMES  shift 44
	DIVIDE  shift 45
	SEMI  reduce 40
	COMMA  reduce 40
	RPR  reduce 40
	RBK  reduce 40
	PLUS  reduce 40
	MINUS  reduce 40
	EQ  reduce 40
	NEQ  reduce 40
	LEQ  reduce 40
	REQ  reduce 40
	LR  reduce 40
	RL  reduce 40
	AND  reduce 40
	OR  reduce 40
	ASSIGN  reduce 40


state 68
	expr : expr . PLUS expr  (40)
	expr : expr . MINUS expr  (41)
	expr : expr MINUS expr .  (41)
	expr : expr . TIMES expr  (42)
	expr : expr . DIVIDE expr  (43)
	expr : expr . EQ expr  (44)
	expr : expr . NEQ expr  (45)
	expr : expr . RL expr  (46)
	expr : expr . LEQ expr  (47)
	expr : expr . LR expr  (48)
	expr : expr . REQ expr  (49)
	expr : expr . AND expr  (50)
	expr : expr . OR expr  (51)
	expr : expr . ASSIGN expr  (54)

	TIMES  shift 44
	DIVIDE  shift 45
	SEMI  reduce 41
	COMMA  reduce 41
	RPR  reduce 41
	RBK  reduce 41
	PLUS  reduce 41
	MINUS  reduce 41
	EQ  reduce 41
	NEQ  reduce 41
	LEQ  reduce 41
	REQ  reduce 41
	LR  reduce 41
	RL  reduce 41
	AND  reduce 41
	OR  reduce 41
	ASSIGN  reduce 41


state 69
	expr : expr . PLUS expr  (40)
	expr : expr . MINUS expr  (41)
	expr : expr . TIMES expr  (42)
	expr : expr TIMES expr .  (42)
	expr : expr . DIVIDE expr  (43)
	expr : expr . EQ expr  (44)
	expr : expr . NEQ expr  (45)
	expr : expr . RL expr  (46)
	expr : expr . LEQ expr  (47)
	expr : expr . LR expr  (48)
	expr : expr . REQ expr  (49)
	expr : expr . AND expr  (50)
	expr : expr . OR expr  (51)
	expr : expr . ASSIGN expr  (54)

	.  reduce 42


state 70
	expr : expr . PLUS expr  (40)
	expr : expr . MINUS expr  (41)
	expr : expr . TIMES expr  (42)
	expr : expr . DIVIDE expr  (43)
	expr : expr DIVIDE expr .  (43)
	expr : expr . EQ expr  (44)
	expr : expr . NEQ expr  (45)
	expr : expr . RL expr  (46)
	expr : expr . LEQ expr  (47)
	expr : expr . LR expr  (48)
	expr : expr . REQ expr  (49)
	expr : expr . AND expr  (50)
	expr : expr . OR expr  (51)
	expr : expr . ASSIGN expr  (54)

	.  reduce 43


state 71
	expr : expr . PLUS expr  (40)
	expr : expr . MINUS expr  (41)
	expr : expr . TIMES expr  (42)
	expr : expr . DIVIDE expr  (43)
	expr : expr . EQ expr  (44)
	expr : expr EQ expr .  (44)
	expr : expr . NEQ expr  (45)
	expr : expr . RL expr  (46)
	expr : expr . LEQ expr  (47)
	expr : expr . LR expr  (48)
	expr : expr . REQ expr  (49)
	expr : expr . AND expr  (50)
	expr : expr . OR expr  (51)
	expr : expr . ASSIGN expr  (54)

	PLUS  shift 42
	MINUS  shift 43
	TIMES  shift 44
	DIVIDE  shift 45
	LEQ  shift 48
	REQ  shift 49
	LR  shift 50
	RL  shift 51
	SEMI  reduce 44
	COMMA  reduce 44
	RPR  reduce 44
	RBK  reduce 44
	EQ  reduce 44
	NEQ  reduce 44
	AND  reduce 44
	OR  reduce 44
	ASSIGN  reduce 44


state 72
	expr : expr . PLUS expr  (40)
	expr : expr . MINUS expr  (41)
	expr : expr . TIMES expr  (42)
	expr : expr . DIVIDE expr  (43)
	expr : expr . EQ expr  (44)
	expr : expr . NEQ expr  (45)
	expr : expr NEQ expr .  (45)
	expr : expr . RL expr  (46)
	expr : expr . LEQ expr  (47)
	expr : expr . LR expr  (48)
	expr : expr . REQ expr  (49)
	expr : expr . AND expr  (50)
	expr : expr . OR expr  (51)
	expr : expr . ASSIGN expr  (54)

	PLUS  shift 42
	MINUS  shift 43
	TIMES  shift 44
	DIVIDE  shift 45
	LEQ  shift 48
	REQ  shift 49
	LR  shift 50
	RL  shift 51
	SEMI  reduce 45
	COMMA  reduce 45
	RPR  reduce 45
	RBK  reduce 45
	EQ  reduce 45
	NEQ  reduce 45
	AND  reduce 45
	OR  reduce 45
	ASSIGN  reduce 45


state 73
	expr : expr . PLUS expr  (40)
	expr : expr . MINUS expr  (41)
	expr : expr . TIMES expr  (42)
	expr : expr . DIVIDE expr  (43)
	expr : expr . EQ expr  (44)
	expr : expr . NEQ expr  (45)
	expr : expr . RL expr  (46)
	expr : expr . LEQ expr  (47)
	expr : expr LEQ expr .  (47)
	expr : expr . LR expr  (48)
	expr : expr . REQ expr  (49)
	expr : expr . AND expr  (50)
	expr : expr . OR expr  (51)
	expr : expr . ASSIGN expr  (54)

	PLUS  shift 42
	MINUS  shift 43
	TIMES  shift 44
	DIVIDE  shift 45
	SEMI  reduce 47
	COMMA  reduce 47
	RPR  reduce 47
	RBK  reduce 47
	EQ  reduce 47
	NEQ  reduce 47
	LEQ  reduce 47
	REQ  reduce 47
	LR  reduce 47
	RL  reduce 47
	AND  reduce 47
	OR  reduce 47
	ASSIGN  reduce 47


state 74
	expr : expr . PLUS expr  (40)
	expr : expr . MINUS expr  (41)
	expr : expr . TIMES expr  (42)
	expr : expr . DIVIDE expr  (43)
	expr : expr . EQ expr  (44)
	expr : expr . NEQ expr  (45)
	expr : expr . RL expr  (46)
	expr : expr . LEQ expr  (47)
	expr : expr . LR expr  (48)
	expr : expr . REQ expr  (49)
	expr : expr REQ expr .  (49)
	expr : expr . AND expr  (50)
	expr : expr . OR expr  (51)
	expr : expr . ASSIGN expr  (54)

	PLUS  shift 42
	MINUS  shift 43
	TIMES  shift 44
	DIVIDE  shift 45
	SEMI  reduce 49
	COMMA  reduce 49
	RPR  reduce 49
	RBK  reduce 49
	EQ  reduce 49
	NEQ  reduce 49
	LEQ  reduce 49
	REQ  reduce 49
	LR  reduce 49
	RL  reduce 49
	AND  reduce 49
	OR  reduce 49
	ASSIGN  reduce 49


state 75
	expr : expr . PLUS expr  (40)
	expr : expr . MINUS expr  (41)
	expr : expr . TIMES expr  (42)
	expr : expr . DIVIDE expr  (43)
	expr : expr . EQ expr  (44)
	expr : expr . NEQ expr  (45)
	expr : expr . RL expr  (46)
	expr : expr . LEQ expr  (47)
	expr : expr . LR expr  (48)
	expr : expr LR expr .  (48)
	expr : expr . REQ expr  (49)
	expr : expr . AND expr  (50)
	expr : expr . OR expr  (51)
	expr : expr . ASSIGN expr  (54)

	PLUS  shift 42
	MINUS  shift 43
	TIMES  shift 44
	DIVIDE  shift 45
	SEMI  reduce 48
	COMMA  reduce 48
	RPR  reduce 48
	RBK  reduce 48
	EQ  reduce 48
	NEQ  reduce 48
	LEQ  reduce 48
	REQ  reduce 48
	LR  reduce 48
	RL  reduce 48
	AND  reduce 48
	OR  reduce 48
	ASSIGN  reduce 48


state 76
	expr : expr . PLUS expr  (40)
	expr : expr . MINUS expr  (41)
	expr : expr . TIMES expr  (42)
	expr : expr . DIVIDE expr  (43)
	expr : expr . EQ expr  (44)
	expr : expr . NEQ expr  (45)
	expr : expr . RL expr  (46)
	expr : expr RL expr .  (46)
	expr : expr . LEQ expr  (47)
	expr : expr . LR expr  (48)
	expr : expr . REQ expr  (49)
	expr : expr . AND expr  (50)
	expr : expr . OR expr  (51)
	expr : expr . ASSIGN expr  (54)

	PLUS  shift 42
	MINUS  shift 43
	TIMES  shift 44
	DIVIDE  shift 45
	SEMI  reduce 46
	COMMA  reduce 46
	RPR  reduce 46
	RBK  reduce 46
	EQ  reduce 46
	NEQ  reduce 46
	LEQ  reduce 46
	REQ  reduce 46
	LR  reduce 46
	RL  reduce 46
	AND  reduce 46
	OR  reduce 46
	ASSIGN  reduce 46


state 77
	expr : expr . PLUS expr  (40)
	expr : expr . MINUS expr  (41)
	expr : expr . TIMES expr  (42)
	expr : expr . DIVIDE expr  (43)
	expr : expr . EQ expr  (44)
	expr : expr . NEQ expr  (45)
	expr : expr . RL expr  (46)
	expr : expr . LEQ expr  (47)
	expr : expr . LR expr  (48)
	expr : expr . REQ expr  (49)
	expr : expr . AND expr  (50)
	expr : expr AND expr .  (50)
	expr : expr . OR expr  (51)
	expr : expr . ASSIGN expr  (54)

	PLUS  shift 42
	MINUS  shift 43
	TIMES  shift 44
	DIVIDE  shift 45
	EQ  shift 46
	NEQ  shift 47
	LEQ  shift 48
	REQ  shift 49
	LR  shift 50
	RL  shift 51
	SEMI  reduce 50
	COMMA  reduce 50
	RPR  reduce 50
	RBK  reduce 50
	AND  reduce 50
	OR  reduce 50
	ASSIGN  reduce 50


state 78
	expr : expr . PLUS expr  (40)
	expr : expr . MINUS expr  (41)
	expr : expr . TIMES expr  (42)
	expr : expr . DIVIDE expr  (43)
	expr : expr . EQ expr  (44)
	expr : expr . NEQ expr  (45)
	expr : expr . RL expr  (46)
	expr : expr . LEQ expr  (47)
	expr : expr . LR expr  (48)
	expr : expr . REQ expr  (49)
	expr : expr . AND expr  (50)
	expr : expr . OR expr  (51)
	expr : expr OR expr .  (51)
	expr : expr . ASSIGN expr  (54)

	PLUS  shift 42
	MINUS  shift 43
	TIMES  shift 44
	DIVIDE  shift 45
	EQ  shift 46
	NEQ  shift 47
	LEQ  shift 48
	REQ  shift 49
	LR  shift 50
	RL  shift 51
	AND  shift 52
	SEMI  reduce 51
	COMMA  reduce 51
	RPR  reduce 51
	RBK  reduce 51
	OR  reduce 51
	ASSIGN  reduce 51


state 79
	expr : expr . PLUS expr  (40)
	expr : expr . MINUS expr  (41)
	expr : expr . TIMES expr  (42)
	expr : expr . DIVIDE expr  (43)
	expr : expr . EQ expr  (44)
	expr : expr . NEQ expr  (45)
	expr : expr . RL expr  (46)
	expr : expr . LEQ expr  (47)
	expr : expr . LR expr  (48)
	expr : expr . REQ expr  (49)
	expr : expr . AND expr  (50)
	expr : expr . OR expr  (51)
	expr : expr . ASSIGN expr  (54)
	expr : expr ASSIGN expr .  (54)

	PLUS  shift 42
	MINUS  shift 43
	TIMES  shift 44
	DIVIDE  shift 45
	EQ  shift 46
	NEQ  shift 47
	LEQ  shift 48
	REQ  shift 49
	LR  shift 50
	RL  shift 51
	AND  shift 52
	OR  shift 53
	ASSIGN  shift 54
	SEMI  reduce 54
	COMMA  reduce 54
	RPR  reduce 54
	RBK  reduce 54


state 80
	formal_decl : COMMA typ ID .  (13)

	.  reduce 13


state 81
	fdecl : typ ID LPR formal_list RPR LBC vdecl_list . stmt_list RBC  (4)
	vdecl_list : vdecl_list . vdecl  (15)
	stmt_list : .  (25)
